@@ -24,6 +24,7 @@ NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at o
 
 3.1.2 2021/11/xx
   - release - node 14.18.2
+  - release - remove daily.sh, setup a cron directly now
   - all - refactor some shared code into common directory
   - capture - fix memory leak with ip4 frags and packet q overflowing
   - capture - standardize on config error process exiting
